force-app/main/default/objects/Activity/fields/Called__c.field-meta.xml
<CustomField>
    <fullName>Called__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Le numéro de téléphone appelé</inlineHelpText>
    <label>Appelé</label>
    <type>Phone</type>
</CustomField>