force-app/main/default/objects/Activity/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Le numéro de téléphone de l&apos;appelant (ANI)</inlineHelpText>
    <label>Appelant</label>
    <type>Phone</type>
</CustomField>