force-app/main/default/objects/Activity/fields/CallId__c.field-meta.xml
<CustomField>
    <fullName>CallId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id de l&apos;appel</label>
    <length>9</length>
    <type>Text</type>
</CustomField>