force-app/main/default/objects/Activity/fields/CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>CallStartTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date et heure du début de l&apos;appel</inlineHelpText>
    <label>Début de l&apos;appel</label>
    <type>DateTime</type>
</CustomField>