force-app/main/default/objects/Activity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Le nom de la compagne POM</inlineHelpText>
    <label>Campagne POM</label>
    <length>96</length>
    <type>Text</type>
</CustomField>