force-app/main/default/objects/Activity/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activit_s</relationshipName>
    <type>Lookup</type>
</CustomField>