force-app/main/default/objects/Activity/fields/Message_laisse_sur_repondeur__c.field-meta.xml
<CustomField>
    <fullName>Message_laisse_sur_repondeur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Message laissé sur répondeur</label>
    <type>Checkbox</type>
</CustomField>