force-app/main/default/objects/Activity/fields/OldCallId__c.field-meta.xml
<CustomField>
    <fullName>OldCallId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ancien Id de l&apos;appel</label>
    <length>9</length>
    <type>Text</type>
</CustomField>