force-app/main/default/objects/Activity/fields/OriginalCallObjectId__c.field-meta.xml
<CustomField>
    <fullName>OriginalCallObjectId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id de l&apos;objet appel original</label>
    <length>20</length>
    <type>Text</type>
</CustomField>