force-app/main/default/objects/Activity/fields/Paneliste_joint__c.field-meta.xml
<CustomField>
    <fullName>Paneliste_joint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panéliste joint</label>
    <type>Checkbox</type>
</CustomField>