force-app/main/default/objects/Activity/fields/qualificationCase__c.field-meta.xml
<CustomField>
    <fullName>qualificationCase__c</fullName>
    <label>Qualification de l&apos;appel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPRO</fullName>
                <label>Réalisé</label>
            </value>
            <value>
                <fullName>CBUS</fullName>
                <label>Occupé</label>
            </value>
            <value>
                <fullName>CFAI</fullName>
                <label>Erreur technique</label>
            </value>
            <value>
                <fullName>CINX</fullName>
                <label>Abandonné</label>
            </value>
            <value>
                <fullName>TWRG</fullName>
                <label>Faux numéro</label>
            </value>
            <value>
                <fullName>TANO</fullName>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>TANM</fullName>
                <label>Répondeur</label>
            </value>
            <value>
                <fullName>TMOD</fullName>
                <label>Fax/Modem</label>
            </value>
            <value>
                <fullName>CNDO</fullName>
                <label>NJPC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>