force-app/main/default/objects/Activity/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>File du Distributeur Automatique d&apos;Appels</inlineHelpText>
    <label>File</label>
    <length>20</length>
    <type>Text</type>
</CustomField>