force-app/main/default/objects/Activity/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nom de la file</label>
    <length>80</length>
    <type>Text</type>
</CustomField>