force-app/main/default/objects/Activity/fields/Statut_audim_tirique__c.field-meta.xml
<CustomField>
    <fullName>Statut_audim_tirique__c</fullName>
    <label>Statut audimétrique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Présent</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>En vacances</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Absent</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Non répondant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>