force-app/main/default/objects/Activity/fields/Statut_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Statut_du_foyer__c</fullName>
    <label>Statut du foyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Recruté</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Installé</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Equipé</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Integré</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Désinstallé</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Chute définitive</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Chute temporaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>