force-app/main/default/objects/Activity/fields/UUI__c.field-meta.xml
<CustomField>
    <fullName>UUI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User to User Information (UUI)</inlineHelpText>
    <label>UUI</label>
    <length>96</length>
    <type>Text</type>
</CustomField>